--- a/2-Browsers/Week1/homework/ex1-bookList/style.css
+++ b/2-Browsers/Week1/homework/ex1-bookList/style.css
@@ -1,1 +1,21 @@
 /* Write your style here */
+li{
+  background-color: red;
+  list-style-type: none;
+  border: 3px solid blue;
+  margin: 10px;
+  display: block;
+  
+}
+
+#bookList{
+  /* display: grid;
+  grid-template-columns: 1fr 1fr 1fr; */
+  padding: 10px;
+  border: 3px solid red;
+}
+
+p{
+  text-align: center;
+  border: 3px dashed yellow;
+}
